// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrcView component 1 renders as expected 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <BrowserRouter>
    <GrcView
      activeFilters={Object {}}
      error={null}
      grcItems={
        Array [
          Object {
            "__typename": "Compliance",
            "clusterCompliant": "1/1",
            "clusterConsoleURL": Object {
              "calamari": "https://console-openshift-console.apps.calamari.dev08.red-chesterfield.com",
            },
            "clusterNS": Object {
              "calamari": "calamari",
            },
            "metadata": Object {
              "__typename": "Metadata",
              "annotations": Object {
                "kubectl.kubernetes.io/last-applied-configuration": "{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"Policy\\",\\"metadata\\":{\\"annotations\\":{\\"policy.open-cluster-management.io/categories\\":\\"PR.DS Data Security\\",\\"policy.open-cluster-management.io/controls\\":\\"PR.DS-2 Data-in-transit\\",\\"policy.open-cluster-management.io/standards\\":\\"NIST-CSF\\"},\\"name\\":\\"case6-test-policy\\",\\"namespace\\":\\"default\\"},\\"spec\\":{\\"disabled\\":false,\\"policy-templates\\":[{\\"objectDefinition\\":{\\"apiVersion\\":\\"policies.ibm.com/v1alpha1\\",\\"kind\\":\\"TrustedContainerPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-test-policy-trustedcontainerpolicy\\"},\\"spec\\":{\\"imageRegistry\\":\\"quay.io\\",\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-system\\",\\"default\\"],\\"include\\":[\\"e2e-test\\"]},\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"low\\"}}},{\\"objectDefinition\\":{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"ConfigurationPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-policy-role-example\\"},\\"spec\\":{\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-*\\"],\\"include\\":[\\"default\\"]},\\"object-templates\\":[{\\"complianceType\\":\\"mustonlyhave\\",\\"objectDefinition\\":{\\"apiVersion\\":\\"rbac.authorization.k8s.io/v1\\",\\"kind\\":\\"Role\\",\\"metadata\\":{\\"name\\":\\"policy-role-example\\"},\\"rules\\":[{\\"apiGroups\\":[\\"extensions\\",\\"apps\\"],\\"resources\\":[\\"deployments\\"],\\"verbs\\":[\\"get\\",\\"list\\",\\"watch\\",\\"delete\\",\\"patch\\"]}]}}],\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"high\\"}}}],\\"remediationAction\\":\\"inform\\"}}
",
                "policy.open-cluster-management.io/categories": "PR.DS Data Security",
                "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                "policy.open-cluster-management.io/standards": "NIST-CSF",
              },
              "name": "case6-test-policy",
              "namespace": "default",
              "resourceVersion": "37198197",
              "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case6-test-policy",
            },
            "name": "case6-test-policy",
            "namespace": "default",
            "placementBindings": Array [
              Object {
                "__typename": "PlacementBinding",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "case6-test-policy-pb",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/placementbindings/case6-test-policy-pb",
                },
              },
            ],
            "placementPolicies": Array [
              Object {
                "__typename": "PlacementPolicy",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "case6-test-policy-plr",
                  "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/default/placementrules/case6-test-policy-plr",
                },
              },
            ],
            "policyCompliant": "0/0",
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "kubectl.kubernetes.io/last-applied-configuration": "{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"Policy\\",\\"metadata\\":{\\"annotations\\":{\\"policy.open-cluster-management.io/categories\\":\\"PR.DS Data Security\\",\\"policy.open-cluster-management.io/controls\\":\\"PR.DS-2 Data-in-transit\\",\\"policy.open-cluster-management.io/standards\\":\\"NIST-CSF\\"},\\"name\\":\\"case6-test-policy\\",\\"namespace\\":\\"default\\"},\\"spec\\":{\\"disabled\\":false,\\"policy-templates\\":[{\\"objectDefinition\\":{\\"apiVersion\\":\\"policies.ibm.com/v1alpha1\\",\\"kind\\":\\"TrustedContainerPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-test-policy-trustedcontainerpolicy\\"},\\"spec\\":{\\"imageRegistry\\":\\"quay.io\\",\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-system\\",\\"default\\"],\\"include\\":[\\"e2e-test\\"]},\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"low\\"}}},{\\"objectDefinition\\":{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"ConfigurationPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-policy-role-example\\"},\\"spec\\":{\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-*\\"],\\"include\\":[\\"default\\"]},\\"object-templates\\":[{\\"complianceType\\":\\"mustonlyhave\\",\\"objectDefinition\\":{\\"apiVersion\\":\\"rbac.authorization.k8s.io/v1\\",\\"kind\\":\\"Role\\",\\"metadata\\":{\\"name\\":\\"policy-role-example\\"},\\"rules\\":[{\\"apiGroups\\":[\\"extensions\\",\\"apps\\"],\\"resources\\":[\\"deployments\\"],\\"verbs\\":[\\"get\\",\\"list\\",\\"watch\\",\\"delete\\",\\"patch\\"]}]}}],\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"high\\"}}}],\\"remediationAction\\":\\"inform\\"}}
",
                  "policy.open-cluster-management.io/categories": "PR.DS Data Security",
                  "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-05-27T14:36:05Z",
                "generation": 1,
                "name": "case6-test-policy",
                "namespace": "default",
                "resourceVersion": "37198197",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case6-test-policy",
                "uid": "ed964170-b17d-4e23-880e-575be3eac901",
              },
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policies.ibm.com/v1alpha1",
                      "kind": "TrustedContainerPolicy",
                      "metadata": Object {
                        "name": "case6-test-policy-trustedcontainerpolicy",
                      },
                      "spec": Object {
                        "imageRegistry": "quay.io",
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-system",
                            "default",
                          ],
                          "include": Array [
                            "e2e-test",
                          ],
                        },
                        "remediationAction": "inform",
                        "severity": "low",
                      },
                    },
                  },
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "kind": "ConfigurationPolicy",
                      "metadata": Object {
                        "name": "case6-policy-role-example",
                      },
                      "spec": Object {
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-*",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "object-templates": Array [
                          Object {
                            "complianceType": "mustonlyhave",
                            "objectDefinition": Object {
                              "apiVersion": "rbac.authorization.k8s.io/v1",
                              "kind": "Role",
                              "metadata": Object {
                                "name": "policy-role-example",
                              },
                              "rules": Array [
                                Object {
                                  "apiGroups": Array [
                                    "extensions",
                                    "apps",
                                  ],
                                  "resources": Array [
                                    "deployments",
                                  ],
                                  "verbs": Array [
                                    "get",
                                    "list",
                                    "watch",
                                    "delete",
                                    "patch",
                                  ],
                                },
                              ],
                            },
                          },
                        ],
                        "remediationAction": "inform",
                        "severity": "high",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "placement": Array [
                  Object {
                    "placementBinding": "case6-test-policy-pb",
                    "placementRule": "case6-test-policy-plr",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "calamari",
                    "clusternamespace": "calamari",
                    "compliant": "NonCompliant",
                  },
                ],
              },
            },
            "remediation": "inform",
          },
          Object {
            "__typename": "Compliance",
            "clusterCompliant": "1/1",
            "clusterConsoleURL": Object {
              "calamari": "https://console-openshift-console.apps.calamari.dev08.red-chesterfield.com",
            },
            "clusterNS": Object {
              "calamari": "calamari",
            },
            "metadata": Object {
              "__typename": "Metadata",
              "annotations": Object {
                "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
                "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
                "policy.open-cluster-management.io/standards": "NIST-CSF",
              },
              "name": "policy-rolebinding",
              "namespace": "default",
              "resourceVersion": "37491359",
              "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/policy-rolebinding",
            },
            "name": "policy-rolebinding",
            "namespace": "default",
            "placementBindings": Array [
              Object {
                "__typename": "PlacementBinding",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "binding-policy-rolebinding",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/placementbindings/binding-policy-rolebinding",
                },
              },
            ],
            "placementPolicies": Array [
              Object {
                "__typename": "PlacementPolicy",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "placement-policy-rolebinding",
                  "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/default/placementrules/placement-policy-rolebinding",
                },
              },
            ],
            "policyCompliant": "0/0",
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
                  "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-05-27T13:23:03Z",
                "generation": 7,
                "name": "policy-rolebinding",
                "namespace": "default",
                "resourceVersion": "37491359",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/policy-rolebinding",
                "uid": "f5f5ad1b-8acc-4814-9560-9edd3ace6fba",
              },
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "kind": "ConfigurationPolicy",
                      "metadata": Object {
                        "name": "policy-rolebinding-example",
                      },
                      "spec": Object {
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-*",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "object-templates": Array [
                          Object {
                            "complianceType": "musthave",
                            "objectDefinition": Object {
                              "apiVersion": "rbac.authorization.k8s.io/v1",
                              "kind": "RoleBinding",
                              "metadata": Object {
                                "name": "operate-pods-rolebinding",
                              },
                              "roleRef": Object {
                                "apiGroup": "rbac.authorization.k8s.io",
                                "kind": "Role",
                                "name": "operator",
                              },
                              "subjects": Array [
                                Object {
                                  "apiGroup": "rbac.authorization.k8s.io",
                                  "kind": "User",
                                  "name": "admin",
                                },
                              ],
                            },
                          },
                        ],
                        "remediationAction": "inform",
                        "severity": "high",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "placement": Array [
                  Object {
                    "placementBinding": "binding-policy-rolebinding",
                    "placementRule": "placement-policy-rolebinding",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "calamari",
                    "clusternamespace": "calamari",
                    "compliant": "NonCompliant",
                  },
                ],
              },
            },
            "remediation": "inform",
          },
        ]
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "s4wxvc",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "s4wxvc",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      loading={false}
      location={
        Object {
          "pathname": "/multicloud/policies/all",
        }
      }
      refreshControl={
        Object {
          "refreshCookie": "grc-refresh-interval-cookie",
          "reloading": false,
          "timestamp": "Tue Jul 23 2019 01:13:42 GMT-0400 (Eastern Daylight Time)",
        }
      }
      secondaryHeaderProps={
        Object {
          "information": "grc.header.tooltip",
          "links": Array [
            Object {
              "id": "create-policy",
              "label": "button.create.policy",
              "url": "/multicloud/policies/create",
            },
          ],
          "tabs": Array [
            Object {
              "id": "grc-overview",
              "index": 0,
              "label": "tabs.grc.overview",
              "url": "/multicloud/policies",
            },
            Object {
              "id": "grc-all",
              "index": 1,
              "label": "tabs.grc.all",
              "url": "/multicloud/policies/all",
            },
            Object {
              "id": "grc-findings",
              "index": 2,
              "label": "tabs.grc.findings",
              "url": "/multicloud/policies/findings",
            },
          ],
          "title": "routes.grc",
        }
      }
      showApplications={true}
      title="Test1"
    />
  </BrowserRouter>
</ContextProvider>
`;

exports[`GrcView component 2 shows loading when given loading:true 1`] = `
<span
  aria-valuetext="Loading..."
  className="pf-c-spinner pf-m-xl patternfly-spinner"
  role="progressbar"
>
  <span
    className="pf-c-spinner__clipper"
  />
  <span
    className="pf-c-spinner__lead-ball"
  />
  <span
    className="pf-c-spinner__tail-ball"
  />
</span>
`;

exports[`GrcView component 3 gives an error notification given an error object 1`] = `
<div
  className="bx--inline-notification bx--inline-notification--error overview-notification"
  kind="error"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      alt="closes notification"
      aria-label="closes notification"
      className="bx--inline-notification__icon"
      fillRule="evenodd"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        closes notification
      </title>
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zM3.293 4.707l8 8 1.414-1.414-8-8-1.414 1.414z"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      >
        
      </p>
      <div
        className="bx--inline-notification__subtitle"
      >
        An unexpected error occurred. Try again.
      </div>
    </div>
  </div>
  <button
    className="bx--inline-notification__close-button"
    onClick={[Function]}
    title="close icon"
    type="button"
  >
    <svg
      alt="close icon"
      aria-label="close icon"
      className="bx--inline-notification__close-icon"
      fillRule="evenodd"
      height="10"
      role="img"
      viewBox="0 0 10 10"
      width="10"
    >
      <title>
        close icon
      </title>
      <path
        d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
      />
    </svg>
  </button>
</div>
`;

exports[`GrcView component 4 renders as expected 1`] = `
<div
  className="grc-view"
>
  <div
    className="resource-filter-bar"
  >
    <span
      className="title"
    >
      Filters:
    </span>
    <span
      className="bx--tag bx--tag--custom"
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      NIST
      <svg
        alt="Remove filter"
        aria-label="Remove filter"
        className="closeIcon"
        fillRule="evenodd"
        height="10"
        name="icon--close"
        onClick={[Function]}
        role="img"
        viewBox="0 0 10 10"
        width="10"
      >
        <title>
          Remove filter
        </title>
        <path
          d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
        />
      </svg>
    </span>
    <span
      className="bx--tag bx--tag--custom"
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      HIPAA
      <svg
        alt="Remove filter"
        aria-label="Remove filter"
        className="closeIcon"
        fillRule="evenodd"
        height="10"
        name="icon--close"
        onClick={[Function]}
        role="img"
        viewBox="0 0 10 10"
        width="10"
      >
        <title>
          Remove filter
        </title>
        <path
          d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
        />
      </svg>
    </span>
    <span
      aria-label="Clear all"
      className="button"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
      title="Clear all"
    >
      Clear all
    </span>
  </div>
  <div
    className="module-grc-cards"
  >
    <dl
      aria-label=""
      className="pf-c-accordion accordion-header"
    >
      <dt>
        <button
          aria-expanded={false}
          className="pf-c-accordion__toggle header-container"
          id="summary-toggle"
          onClick={[Function]}
        >
          <span
            className="pf-c-accordion__toggle-text"
          >
            <div
              className="header-title"
            >
              Summary
              <span
                className="pf-c-label grc-cards-count"
              >
                <span
                  className="pf-c-label__content"
                >
                  2
                </span>
              </span>
            </div>
          </span>
          <span
            className="pf-c-accordion__toggle-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
        </button>
      </dt>
      <dd
        aria-label=""
        className="pf-c-accordion__expanded-content grc-cards-container"
        hidden={true}
        id=""
      >
        <div
          className="pf-c-accordion__expanded-content-body"
        >
          <div>
            <div
              className="card-container"
            >
              <div
                className="card-content"
              >
                <div
                  className="card-name"
                >
                  NIST
                </div>
                <div
                  className="card-count-content"
                >
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        2
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /2
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Cluster violations
                    </div>
                  </div>
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        3
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /3
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Policy violations
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="card-container"
            >
              <div
                className="card-content"
              >
                <div
                  className="card-name"
                >
                  HIPAA
                </div>
                <div
                  className="card-count-content"
                >
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        1
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /2
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Cluster violations
                    </div>
                  </div>
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        2
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /2
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Policy violations
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </dl>
  </div>
  <div
    className="grc-toggle"
  >
    <div
      className="resource-table"
    >
      <div
        className="grc-view-by-policies-table"
      >
        <div
          className="pattern-fly-table-group"
        >
          <div
            className="pf-c-search-input"
          >
            <span
              className="pf-c-search-input__text"
            >
              <span
                className="pf-c-search-input__icon"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                className="pf-c-search-input__text-input"
                onChange={[Function]}
                placeholder="Find policies"
                value=""
              />
            </span>
            
          </div>
          <div
            className="pattern-fly-table"
          >
            <table
              aria-label="Sortable Table"
              className="pf-c-table pf-m-grid-md"
              data-ouia-component-id="OUIA-Generated-Table-1"
              data-ouia-component-type="PF4/Table"
              data-ouia-safe={true}
              role="grid"
            >
              <thead
                className="pattern-fly-table-header"
              >
                <tr>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={0}
                    data-label="Policy name"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Policy name
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={1}
                    data-label="Namespace"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Namespace
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={2}
                    data-label="Remediation"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Remediation
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={3}
                    data-label="Cluster violations"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Cluster violations
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={4}
                    data-label="Standards"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Standards
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={5}
                    data-label="Categories"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Categories
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-m-wrap pf-c-table__sort"
                    data-key={6}
                    data-label="Controls"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Controls
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <th
                    aria-sort="descending"
                    className="pf-c-table__sort pf-m-selected pf-m-wrap"
                    data-key={7}
                    data-label="Last Updated"
                    onMouseEnter={[Function]}
                    scope="col"
                  >
                    <button
                      className="pf-c-table__button"
                      onClick={[Function]}
                      type="button"
                    >
                      <div
                        className="pf-c-table__button-content"
                      >
                        <span
                          className="pf-c-table__text"
                          onMouseEnter={[Function]}
                        >
                          Last Updated
                        </span>
                        <span
                          className="pf-c-table__sort-indicator"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                  </th>
                  <td
                    className=""
                    data-key={8}
                    data-label=""
                    onMouseEnter={[Function]}
                  >
                    
                  </td>
                </tr>
              </thead>
              <tbody
                className="pattern-fly-table-body"
              >
                <tr
                  className=""
                  data-ouia-component-id="OUIA-Generated-TableRow-1"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className="pf-m-break-word"
                    data-key={0}
                    data-label="Policy name"
                    onMouseEnter={[Function]}
                  >
                    <a
                      href="/undefined/all/calamari/my-policy"
                      onClick={[Function]}
                    >
                      my-policy
                    </a>
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={1}
                    data-label="Namespace"
                    onMouseEnter={[Function]}
                  >
                    calamari
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={2}
                    data-label="Remediation"
                    onMouseEnter={[Function]}
                  >
                    enforce
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={3}
                    data-label="Cluster violations"
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="violationCell"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="#467f40"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                        />
                      </svg>
                      0/2
                    </div>
                  </td>
                  <td
                    className=""
                    data-key={4}
                    data-label="Standards"
                    onMouseEnter={[Function]}
                  >
                    -
                  </td>
                  <td
                    className=""
                    data-key={5}
                    data-label="Categories"
                    onMouseEnter={[Function]}
                  >
                    -
                  </td>
                  <td
                    className=""
                    data-key={6}
                    data-label="Controls"
                    onMouseEnter={[Function]}
                  >
                    -
                  </td>
                  <td
                    className=""
                    data-key={7}
                    data-label="Last Updated"
                    onMouseEnter={[Function]}
                  >
                    <span>
                      a year ago
                    </span>
                  </td>
                  <td
                    className="pf-c-table__action"
                    data-key={8}
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="pf-c-dropdown pf-m-align-right"
                      data-ouia-component-id="OUIA-Generated-Dropdown-1"
                      data-ouia-component-type="PF4/Dropdown"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        aria-label="Actions"
                        className="pf-c-dropdown__toggle pf-m-plain"
                        disabled={false}
                        id="pf-dropdown-toggle-id-0"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  className=""
                  data-ouia-component-id="OUIA-Generated-TableRow-2"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className="pf-m-break-word"
                    data-key={0}
                    data-label="Policy name"
                    onMouseEnter={[Function]}
                  >
                    <a
                      href="/undefined/all/calamari/policy-role"
                      onClick={[Function]}
                    >
                      policy-role
                    </a>
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={1}
                    data-label="Namespace"
                    onMouseEnter={[Function]}
                  >
                    calamari
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={2}
                    data-label="Remediation"
                    onMouseEnter={[Function]}
                  >
                    inform
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={3}
                    data-label="Cluster violations"
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="violationCell"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="#c9190b"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                      1/2
                    </div>
                  </td>
                  <td
                    className=""
                    data-key={4}
                    data-label="Standards"
                    onMouseEnter={[Function]}
                  >
                    NIST, HIPAA
                  </td>
                  <td
                    className=""
                    data-key={5}
                    data-label="Categories"
                    onMouseEnter={[Function]}
                  >
                    System And Communications Protections, System And Information Integrity
                  </td>
                  <td
                    className=""
                    data-key={6}
                    data-label="Controls"
                    onMouseEnter={[Function]}
                  >
                    Mutation Advisor, VA
                  </td>
                  <td
                    className=""
                    data-key={7}
                    data-label="Last Updated"
                    onMouseEnter={[Function]}
                  >
                    <span>
                      a year ago
                    </span>
                  </td>
                  <td
                    className="pf-c-table__action"
                    data-key={8}
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="pf-c-dropdown pf-m-align-right"
                      data-ouia-component-id="OUIA-Generated-Dropdown-2"
                      data-ouia-component-type="PF4/Dropdown"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        aria-label="Actions"
                        className="pf-c-dropdown__toggle pf-m-plain"
                        disabled={false}
                        id="pf-dropdown-toggle-id-1"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  className=""
                  data-ouia-component-id="OUIA-Generated-TableRow-3"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className="pf-m-break-word"
                    data-key={0}
                    data-label="Policy name"
                    onMouseEnter={[Function]}
                  >
                    <a
                      href="/undefined/all/calamari/policy-ma"
                      onClick={[Function]}
                    >
                      policy-ma
                    </a>
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={1}
                    data-label="Namespace"
                    onMouseEnter={[Function]}
                  >
                    calamari
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={2}
                    data-label="Remediation"
                    onMouseEnter={[Function]}
                  >
                    enforce
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={3}
                    data-label="Cluster violations"
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="violationCell"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="#c9190b"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                      1/2
                    </div>
                  </td>
                  <td
                    className=""
                    data-key={4}
                    data-label="Standards"
                    onMouseEnter={[Function]}
                  >
                    NIST
                  </td>
                  <td
                    className=""
                    data-key={5}
                    data-label="Categories"
                    onMouseEnter={[Function]}
                  >
                    System And Information Integrity
                  </td>
                  <td
                    className=""
                    data-key={6}
                    data-label="Controls"
                    onMouseEnter={[Function]}
                  >
                    Mutation Advisor
                  </td>
                  <td
                    className=""
                    data-key={7}
                    data-label="Last Updated"
                    onMouseEnter={[Function]}
                  >
                    <span>
                      a year ago
                    </span>
                  </td>
                  <td
                    className="pf-c-table__action"
                    data-key={8}
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="pf-c-dropdown pf-m-align-right"
                      data-ouia-component-id="OUIA-Generated-Dropdown-3"
                      data-ouia-component-type="PF4/Dropdown"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        aria-label="Actions"
                        className="pf-c-dropdown__toggle pf-m-plain"
                        disabled={false}
                        id="pf-dropdown-toggle-id-2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  className=""
                  data-ouia-component-id="OUIA-Generated-TableRow-4"
                  data-ouia-component-type="PF4/TableRow"
                  data-ouia-safe={true}
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className="pf-m-break-word"
                    data-key={0}
                    data-label="Policy name"
                    onMouseEnter={[Function]}
                  >
                    <a
                      href="/undefined/all/calamari/policy-pod"
                      onClick={[Function]}
                    >
                      policy-pod
                    </a>
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={1}
                    data-label="Namespace"
                    onMouseEnter={[Function]}
                  >
                    calamari
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={2}
                    data-label="Remediation"
                    onMouseEnter={[Function]}
                  >
                    inform
                  </td>
                  <td
                    className="pf-m-break-word"
                    data-key={3}
                    data-label="Cluster violations"
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="violationCell"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="#c9190b"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        />
                      </svg>
                      1/2
                    </div>
                  </td>
                  <td
                    className=""
                    data-key={4}
                    data-label="Standards"
                    onMouseEnter={[Function]}
                  >
                    NIST, HIPAA
                  </td>
                  <td
                    className=""
                    data-key={5}
                    data-label="Categories"
                    onMouseEnter={[Function]}
                  >
                    System And Communications Protections, System And Information Integrity
                  </td>
                  <td
                    className=""
                    data-key={6}
                    data-label="Controls"
                    onMouseEnter={[Function]}
                  >
                    Mutation Advisor, Certificate Manager
                  </td>
                  <td
                    className=""
                    data-key={7}
                    data-label="Last Updated"
                    onMouseEnter={[Function]}
                  >
                    <span>
                      a year ago
                    </span>
                  </td>
                  <td
                    className="pf-c-table__action"
                    data-key={8}
                    onMouseEnter={[Function]}
                  >
                    <div
                      className="pf-c-dropdown pf-m-align-right"
                      data-ouia-component-id="OUIA-Generated-Dropdown-4"
                      data-ouia-component-type="PF4/Dropdown"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        aria-label="Actions"
                        className="pf-c-dropdown__toggle pf-m-plain"
                        disabled={false}
                        id="pf-dropdown-toggle-id-3"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <div
              className="pf-c-pagination pf-m-bottom"
              data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
              data-ouia-component-type="PF4/Pagination"
              data-ouia-safe={true}
              id="pagination-options-menu-bottom-0"
            >
              <div
                className="pf-c-options-menu pf-m-top"
                data-ouia-component-type="PF4/PaginationOptionsMenu"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                >
                  <span
                    className="pf-c-options-menu__toggle-text"
                  >
                    <b>
                      1
                       - 
                      4
                    </b>
                     
                    of 
                    <b>
                      4
                    </b>
                     
                    
                  </span>
                  <button
                    aria-expanded={false}
                    aria-label="Items per page"
                    className="  pf-c-options-menu__toggle-button"
                    disabled={false}
                    id="pagination-options-menu-bottom-toggle-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span
                      className="pf-c-options-menu__toggle-button-icon"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <nav
                aria-label="Pagination"
                className="pf-c-pagination__nav"
              >
                <div
                  className="pf-c-pagination__nav-control pf-m-first"
                >
                  <button
                    aria-disabled={true}
                    aria-label="Go to first page"
                    className="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="first"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={null}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  className="pf-c-pagination__nav-control"
                >
                  <button
                    aria-disabled={true}
                    aria-label="Go to previous page"
                    className="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="previous"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={null}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  className="pf-c-pagination__nav-page-select"
                >
                  <input
                    aria-label="Current page"
                    className="pf-c-form-control"
                    disabled={true}
                    max={1}
                    min={1}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="number"
                    value={1}
                  />
                  <span
                    aria-hidden="true"
                  >
                    of 
                    1
                  </span>
                </div>
                <div
                  className="pf-c-pagination__nav-control"
                >
                  <button
                    aria-disabled={true}
                    aria-label="Go to next page"
                    className="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="next"
                    data-ouia-component-id="OUIA-Generated-Button-plain-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={null}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  className="pf-c-pagination__nav-control pf-m-last"
                >
                  <button
                    aria-disabled={true}
                    aria-label="Go to last page"
                    className="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="last"
                    data-ouia-component-id="OUIA-Generated-Button-plain-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe={true}
                    disabled={true}
                    onClick={[Function]}
                    tabIndex={null}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GrcView component 7 has create permission renders as expected 1`] = `
<div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/EmptyPagePlanet-illus.png"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        No policies found
      </div>
      <div
        className="no-resource-detail"
      >
        You don't have any policies, yet. Use the 
        <span
          className="no-resource-detail__link"
        >
          create policy
        </span>
         button to create the resource or view the documentation to find samples for creating new policies.
      </div>
    </div>
    <div
      className="button-group"
    >
      <div
        className="button-group-create-resource"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-primary pf-m-small"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="create-resource"
          onClick={[Function]}
          type="button"
        >
          Create policy
        </button>
      </div>
      <div
        className="button-group-doc-link"
      >
        <a
          aria-describedby="launchWindow"
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link pf-m-inline"
          data-ouia-component-id="OUIA-Generated-Button-link-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={null}
          href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
          id="doc-link"
          target="doc"
          type={null}
        >
          View documentation
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GrcView component 8 has not create permission renders as expected 1`] = `
<div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/EmptyPagePlanet-illus.png"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        No policies found
      </div>
      <div
        className="no-resource-detail"
      >
        You don't have any policies, yet. Use the 
        <span
          className="no-resource-detail__link"
        >
          create policy
        </span>
         button to create the resource or view the documentation to find samples for creating new policies.
      </div>
    </div>
    <div
      className="button-group"
    >
      <div
        className="button-group-create-resource"
      >
        <div
          aria-describedby="pf-tooltip-1"
          className="disable-tooltip"
        >
          <button
            aria-disabled={true}
            aria-label={null}
            className="pf-c-button pf-m-primary pf-m-disabled pf-m-small"
            data-ouia-component-id="OUIA-Generated-Button-primary-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            id="create-resource"
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            Create policy
          </button>
        </div>
      </div>
      <div
        className="button-group-doc-link"
      >
        <a
          aria-describedby="launchWindow"
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link pf-m-inline"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={null}
          href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
          id="doc-link"
          target="doc"
          type={null}
        >
          View documentation
        </a>
      </div>
    </div>
  </div>
</div>
`;
